Fix gaps in 11 existing prompts from production branch analysis
Prompt 01: Add OAuth scope management, token encryption, MustAuthorizeException
Prompt 05: Add cursor-based pagination, filtering/sorting, page size cap
Prompt 06: Add batch operations, optimistic locking with ETag
Prompt 07: Add exponential backoff with jitter, bounded max attempts
Prompt 08: Add event deduplication with bounded set, at-least-once note
Prompt 15: Add INVOKER_REMOVED cleanup, scheduler guard pattern
Prompt 16: Add circuit breaker pattern, fallback/degraded response
Prompt 17: Add jitter randomization, circuit breaker integration
Prompt 18: Add SonarQube/JaCoCo config, Mockito Java 21 setup
Prompt 22: Add service layer abstraction, DAO/repository pattern
Prompt 24: Add entity relationships, entity versioning guidance

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>